First commit, index and css

--- a/index.html
+++ b/index.html
@@ -5,14 +5,151 @@
   <title> Anglers Associations </title> 
   <!-- Link to reset.css first -->
   <link rel="stylesheet" href="css/reset.css" type="text/css">   
-
   <link rel="stylesheet" href="css/main.css" type="text/css">  
-
 </head>
 
 <body>
+	<div id="siteContainer">
+		<h1 class="hidden">TRAA Website</h1>
+		<header id="mainHeader">
+			<div id="logo">
+				<img src="images/logo.png" alt="Anglers Logo" width="225" height="190">
+			</div>
+			<nav id="mainNav">
+				<h2 class="hidden">Main Navigation</h2>
+				<ul>
+					<li><a href="#">HOME</a></li>
+					<li><a href="#">ABOUT</a></li>
+					<li><a href="#">EVENTS</a></li>
+					<li><a href="#">PROJECTS</a></li>
+					<li><a href="#">NEWSLETTER</a></li>
+					<li><a href="#">CONTACT</a></li>
+				</ul>
+			</nav>		
+		</header>
+<!-- Begin of Index -->
+		<section id="indexPage">
+			<h2 class="hidden">TRAA Index</h2>
+			<h1 id="WelcomeText">Welcome to the TRAA</h1>
+			<img id="HPwaterline" src="images/waterline.png" width="545" height="25">
+			<h2 id="IntroText">Dedication Today for Tomorrow</h2>
+			<p>“For the enhancement, protection and promotion of a viable,<br>multi-species fishery within the Thames River watershed.”</p>
+			<img id="HPwaterline" src="images/waterline.png" width="545" height="25">
+		</section>
+<!-- End of Index -->
+
+<!-- Begin of About page -->
+		<section id="aboutPage">
+			<h1>About the TRAA</h1>
+			<img id="waterline" src="images/waterline.png" width="545" height="25">
+			<section class="aboutContent">
+				<h2 class="hidden">About content</h2>
+				<img class="aboutIcon" src="images/fish-icon.png" width="115" height="115">
+				<p>Protect, enhance and regenerate a viable, multi-species, year-round fishery.</p>
+			</section>
+
+			<section class="aboutContent">
+				<h2 class="hidden">About content</h2>
+				<img class="aboutIcon" src="images/fish-icon.png" width="115" height="115">
+				<p>Breed, relocate and stock to re-establish or augment appropriate species of fish.</p>
+			</section>
+
+			<section class="aboutContent">
+				<h2 class="hidden">About content</h2>
+				<img class="aboutIcon" src="images/global-icon1.png" width="125" height="155">
+				<p>Promote and participate in environmental clean-up, pollution control and rehabilitation.</p>
+			</section>
+
+			<section class="aboutContent">
+				<h2 class="hidden">About content</h2>
+				<img class="aboutIcon" src="images/global-icon1.png" width="115" height="115">
+				<p>Promote environmentally sound sport fishing practices.</p>
+			</section>
+
+			<section class="aboutContent">
+				<h2 class="hidden">About content</h2>
+				<img class="aboutIcon" src="images/handshake-icon.png" width="115" height="115">
+				<p>Form partnerships with community businesses, government agencies, special interest groups, landowners, and other stakeholders in the Thames River watershed.</p>
+			</section>
+
+			<section class="aboutContent">
+				<h2 class="hidden">About content</h2>
+				<img class="aboutIcon" src="images/handshake-icon.png" width="115" height="115">
+
+				<p>Increase public awareness of the unique diversity of the Thames River Watershed, its challenges, its recreational opportunities and its vital importance to our community.</p>
+			</section>
+
+			<div id="aboutButton">
+				<a href="#" class="greenButton">Contact Us</a>
+				<h2 class="hidden">About content</h2>
+				<a href="#" class="greyButton">See more</a>
+			</div>
+		</section>
+<!-- End of About Page -->
+<!-- Begin of Membership -->
+		<section id="membership">
+			<h1 class="hidden">Membership</h1>
+			<div id="membershipText">
+				<h2>MEMBERSHIPS ARE DUE!</h2>
+				<h3> BE A TRAA MEMBER FOR A WHOLE YEAR FOR ONLY $25.00</h3>
+				<p>Your membership also adds another voice to our efforts in protecting and enhancing aquatic habitats in the London & area community.</p>
+			</div>
+			<img src="images/membership-icon.png" alt="membership icon" width="405" height="405">
+		</section>
+<!-- End of Membership -->
+<!-- Begin of Events page -->
+		<section id="eventPage">
+			<h1>Events</h1>
+			<img id="waterline" src="images/waterline.png" width="545" height="25">
+			<div id="firstEvent">
+				<section class="event">
+					<img src="images/upcoming-img.jpg" alt="Upcoming image">
+					<h2>Upcoming Events - Rod Building</h2>
+					<p>7:00PM - Mondays, February 18 through March 11, 2019.<br>This opportunity is open only to current members of the TRAA, WOFGPA and/or FCFFC.</p>
+					<a href="#" class="eventButton">See more</a>
+				</section>
+
+				<section class="event">
+					<img src="images/family-fishing.jpg" alt="Upcoming image">
+					<h2>Family Fishing Day</h2>
+					<p>This event has become another TRAA tradition. Members have been helping the Fanshawe Campers Association with the Family Fishing Day for many years now.</p>
+					<a href="#" class="eventButton">See more</a>
+				</section>
 
 
+				<section class="event">
+					<img src="images/dam-nation-film.jpg" alt="Upcoming image">
+					<h2>TRAA Presented the Film</h2>
+					<p>If you haven't already done so, please take a moment to Click Here to review and consider signing & sharing our petition to the City of London to encourage them to decommission Springbank Dam. </p>
+					<a href="#" class="eventButton">See more</a>
+				</section>
+			</div>
+			<div id="anotherEvents">
+				<section class="event">
+					<img src="images/trout-release.jpg" alt="Upcoming image">
+					<h2>Trout Release</h2>
+					<p>The trout hatchery is now idle and will undergo some upgrades over the summer in addition to the regular yearly maintenance. If you'd like to get in on this and other TRAA activities just contact us.</p>
+					<a href="#" class="eventButton">See more</a>
+				</section>
+
+				<section class="event">
+					<img src="images/stream-habitat.jpg" alt="Upcoming image">
+					<h2>Stream Habitat Work Party</h2>
+					<p>A few TRAA members cleared a number of fallen trees and other blockages on October 13th. Click the link to see a video make by Dan Shinkelshoek.</p>
+					<a href="#" class="eventButton">See more</a>
+				</section>
+
+				<section class="event">
+					<img src="images/project-day.jpg" alt="Upcoming image">
+					<h2>TRAA Project Days</h2>
+					<p>TRAA members have been hard at it all through the late summer and fall making the Keith Wales Memorial Hatchery more accessible, safer and esthetically pleasing. </p>
+					<a href="#" class="eventButton">See more</a>
+				</section>
+			</div>
+			<a href="#" id="bigEventButton">Explore our past events</a>
+		</section>
+<!-- End of Events Page-->
+	</div>
     <script src="js/main.js"></script>
 </body>
 </html>
