add Gradient for button

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 
 
 				<section class="event">
-					<img src="images/dam-nation-film.jpg" alt="Upcoming image">
+					<img src="images/dam-nation-film.jpg" alt="Dam nation image">
 					<h2>TRAA Presented the Film</h2>
 					<p>If you haven't already done so, please take a moment to Click Here to review and consider signing & sharing our petition to the City of London to encourage them to decommission Springbank Dam. </p>
 					<a href="#" class="eventButton">See more</a>
@@ -126,21 +126,21 @@
 			</div>
 			<div id="anotherEvents">
 				<section class="event">
-					<img src="images/trout-release.jpg" alt="Upcoming image">
+					<img src="images/trout-release.jpg" alt="Trout image">
 					<h2>Trout Release</h2>
 					<p>The trout hatchery is now idle and will undergo some upgrades over the summer in addition to the regular yearly maintenance. If you'd like to get in on this and other TRAA activities just contact us.</p>
 					<a href="#" class="eventButton">See more</a>
 				</section>
 
 				<section class="event">
-					<img src="images/stream-habitat.jpg" alt="Upcoming image">
+					<img src="images/stream-habitat.jpg" alt="Stream-habitat image">
 					<h2>Stream Habitat Work Party</h2>
 					<p>A few TRAA members cleared a number of fallen trees and other blockages on October 13th. Click the link to see a video make by Dan Shinkelshoek.</p>
 					<a href="#" class="eventButton">See more</a>
 				</section>
 
 				<section class="event">
-					<img src="images/project-day.jpg" alt="Upcoming image">
+					<img src="images/project-day.jpg" alt="Project day image">
 					<h2>TRAA Project Days</h2>
 					<p>TRAA members have been hard at it all through the late summer and fall making the Keith Wales Memorial Hatchery more accessible, safer and esthetically pleasing. </p>
 					<a href="#" class="eventButton">See more</a>
