updated events section

--- a/index.html
+++ b/index.html
@@ -113,19 +113,19 @@
 
 <!----------------- Begin of Events page -------------->
 		<section id="eventPage">
-			<h1>Events</h1>
-			<img class="waterline" src="images/waterline.png" width="395" height="15">
+			<h2>Events</h2>
+			<img class="waterlineEvent" src="images/waterline.png" width="395" height="15">
 			<div id="firstEvent">
 				<section class="event">
 					<img src="images/upcoming-img.jpg" alt="Upcoming image">
-					<h2>Upcoming Events - Rod Building</h2>
+					<h3>Upcoming Events - Rod Building</h3>
 					<p>7:00PM - Mondays, February 18 through March 11, 2019.<br>This opportunity is open only to current members of the TRAA, WOFGPA and/or FCFFC.</p>
 					<a href="#" class="eventButton">See more</a>
 				</section>
 
 				<section class="event">
 					<img src="images/family-fishing.jpg" alt="Upcoming image">
-					<h2>Family Fishing Day</h2>
+					<h3>Family Fishing Day</h3>
 					<p>This event has become another TRAA tradition. Members have been helping the Fanshawe Campers Association with the Family Fishing Day for many years now.</p>
 					<a href="#" class="eventButton">See more</a>
 				</section>
@@ -133,7 +133,7 @@
 
 				<section class="event">
 					<img src="images/dam-nation-film.jpg" alt="Dam nation image">
-					<h2>TRAA Presented the Film</h2>
+					<h3>TRAA Presented the Film</h3>
 					<p>If you haven't already done so, please take a moment to Click Here to review and consider signing & sharing our petition to the City of London to encourage them to decommission Springbank Dam. </p>
 					<a href="#" class="eventButton">See more</a>
 				</section>
@@ -141,26 +141,29 @@
 			<div id="anotherEvents">
 				<section class="event">
 					<img src="images/trout-release.jpg" alt="Trout image">
-					<h2>Trout Release</h2>
+					<h3>Trout Release</h3>
 					<p>The trout hatchery is now idle and will undergo some upgrades over the summer in addition to the regular yearly maintenance. If you'd like to get in on this and other TRAA activities just contact us.</p>
 					<a href="#" class="eventButton">See more</a>
 				</section>
 
 				<section class="event">
 					<img src="images/stream-habitat.jpg" alt="Stream-habitat image">
-					<h2>Stream Habitat Work Party</h2>
+					<h3>Stream Habitat Work Party</h3>
 					<p>A few TRAA members cleared a number of fallen= trees and other blockages on October 13th. Click the link to see a video make by Dan Shinkelshoek.</p>
 					<a href="#" class="eventButton">See more</a>
 				</section>
 
 				<section class="event">
 					<img src="images/project-day.jpg" alt="Project day image">
-					<h2>TRAA Project Days</h2>
+					<h3>TRAA Project Days</h3>
 					<p>TRAA members have been hard at it all through the late summer and fall making the Keith Wales Memorial Hatchery more accessible, safer and esthetically pleasing. </p>
 					<a href="#" class="eventButton">See more</a>
 				</section>
 			</div>
+
+			<div class="eventButtonCon">
 			<a href="#" id="bigEventButton">Explore our past events</a>
+			</div>
 		</section>
 <!--------------- End of Events Page -------------->
 	</div>
