Created Projects section in index.html

--- a/index.html
+++ b/index.html
@@ -111,6 +111,38 @@
 		</section>
 <!------------------- End of Membership ---------------->
 
+<!------------ Begin of Projects  -------->
+
+	<section class="projectsCon">
+
+		<div class="projectsHeader">
+		<h2>Projects</h2>
+		<img  src="images/waterline.png"  alt="Water Line" class="waterlineProjects">
+
+		<p class="projectsInfo">This is what sets the TRAA apart from other clubs and organizations. You'll find us right in the water clearing obstructions from streams, measuring returning salmonids & taking scale samples for DNA analysis, education through trout hatchery tours & stream walks, being a voice for the Thames River watershed & its inhabitants and the list goes on.</p>
+		</div>
+
+		<div class="projects">
+			
+			<section class="projectsDesc">
+				<img src="">
+			</section>
+
+			<section class="projectsDesc">
+				
+			</section>
+
+			<section class="projectsDesc">
+				
+			</section>
+
+
+		</div>
+
+	</section>
+
+<!-----------End Of Projects------- -->
+
 <!----------------- Begin of Events page -------------->
 		<section id="eventPage">
 			<h2>Events</h2>
