created coontact section on index.html

--- a/index.html
+++ b/index.html
@@ -204,6 +204,27 @@
 			</div>
 		</section>
 <!--------------- End of Events Page -------------->
+
+<!--------------- CONTACT SECTION ------------->
+	<div class="contacCon">
+		
+		<section class="contact">
+			<h2>Contact Us</h2>
+			<img src="images/waterline.png" alt="Water Line">
+			<p class="contactInfo">If you're with a like-minded organization or group looking for more information on the TRAA and its activities or
+			if you're an individual who would like to become involved with the activities undertaken by the TRAA</p>
+
+			<h3>Come and talk to us at a TRAA General Meeting</h3>
+
+			<p class="contactMeeting">The TRAA meets every second Wednesday of each month. We always try to get the meetings started by 7:00pm so try to be there a few minutes beforehand. The venue is the Western Ontario Fish & Game Protective Association's clubhouse located just east of the Dearness Home on Southdale Road (East), on the North side of Southdale Road. The address is 790 Southdale Road East, London, Ontario.</p>
+
+			<form>
+				
+			</form>
+		</section>
+	</div>
+
+<!-------        END CONTACT SECTION       ---->
 	</div>
     <script src="js/main.js"></script>
 </body>
