Created Social Media section

--- a/index.html
+++ b/index.html
@@ -249,6 +249,18 @@
 	</div>
 
 <!-------        END CONTACT SECTION       ---->
+
+<!--=========	SOCIAL MEDIA  ====== -->
+		
+		<div class="socialMediaCon">
+			<section class="SocialMedia">
+			<h2 class="hidden">Social Media Section</h2>
+
+			
+			</section>
+		</div>
+
+<!--==== END SOCIAL MEDIA ========= -->
 	</div>
     <script src="js/main.js"></script>
 </body>
