--- a/index.html
+++ b/index.html
@@ -256,17 +256,69 @@
 			<section class="socialMedia">
 			<h2 class="hidden">Social Media Section</h2>
 
+			<a href="https://twitter.com" target="_blank">
 			<img src="images/social_twitter.svg" alt="Twitter Icon" width="50" height="50">
+			</a>
 
+			<a href="https://www.instagram.com/?hl=en" target="_blank">
 			<img src="images/social_instagram.svg" alt="Instagram Icon" width="50" height="50">
+			</a>
 
+			<a href="https://www.facebook.com" target="_blank">
 			<img src="images/social_facebook.svg" alt="Facebook Icon" width="50" height="50">
+			</a>
 
 
 			</section>
 		</div>
 
 <!--==== END SOCIAL MEDIA ========= -->
+
+<!-- ======== FOOTER ==============-->
+		<div class="footerCon">
+			
+		<footer>
+		<h2 class="hidden">Footer Section</h2>
+
+			<section class="footerNavCon">
+			<h2 class="hidden">Footer Navigation</h2>
+
+				<h3>NAVIGATION</h3>
+				<nav class="footerNav">
+					
+						<li><a href="#">HOME</a></li>
+						<li><a href="#">ABOUT</a></li>
+						<li><a href="#">EVENTS</a></li>
+						<li><a href="#">PROJECTS</a></li>
+						<li><a href="#">NEWSLETTER</a></li>
+						<li><a href="#">CONTACT</a></li>
+					
+				</nav>
+			</section>
+
+			<section class="footerLogo">
+			<h3 class="hidden">Logo</h3>
+
+				<img src="images/footer_logo.svg" alt="Logo">
+			</section>
+
+			<section class="footerLinks">
+			<h3>USEFUL LINKS</h3>
+				<a href="#">Carolinian Canada</a>
+				<a href="#">Nature London</a>
+				<a href="#">Friends of the Thames</a>
+				<a href="#">Ontario Streams</a>
+				<a href="#">Trout Unlimited Canada</a>
+
+
+			</section>
+
+			
+		</footer>
+
+		</div>
+	
+<!-- ============ END FOOTER =========== -->
 	</div>
     <script src="js/main.js"></script>
 </body>
