finished footer section

--- a/index.html
+++ b/index.html
@@ -285,14 +285,14 @@
 
 				<h3>NAVIGATION</h3>
 				<nav class="footerNav">
-					
+					<ul>
 						<li><a href="#">HOME</a></li>
 						<li><a href="#">ABOUT</a></li>
 						<li><a href="#">EVENTS</a></li>
 						<li><a href="#">PROJECTS</a></li>
 						<li><a href="#">NEWSLETTER</a></li>
 						<li><a href="#">CONTACT</a></li>
-					
+					</ul>
 				</nav>
 			</section>
 
@@ -304,12 +304,15 @@
 
 			<section class="footerLinks">
 			<h3>USEFUL LINKS</h3>
-				<a href="#">Carolinian Canada</a>
-				<a href="#">Nature London</a>
-				<a href="#">Friends of the Thames</a>
-				<a href="#">Ontario Streams</a>
-				<a href="#">Trout Unlimited Canada</a>
 
+			<ul>
+				<li><a href="#">Carolinian Canada</a></li>
+				<li><a href="#">Nature London</a></li>
+				<li><a href="#">Friends of the Thames</a></li>
+				<li><a href="#">Ontario Streams</a></li>
+				<li><a href="#">Trout Unlimited Canada</a></li>
+				<li><a href="#">Angling Sports </a></li>
+			</ul>
 
 			</section>
 
