--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 				<h3> BE A TRAA MEMBER FOR A WHOLE YEAR FOR ONLY $25.00</h3>
 				<p>Your membership also adds another voice to our efforts in protecting and enhancing aquatic habitats in the London & area community.</p>
 			</div>
-			<img src="images/membership-icon.png" alt="membership icon" width="405" height="405">
+			<img src="images/membership-icon.png" class="flip-vertical-left" alt="membership icon" width="405" height="405">
 		</section>
 <!------------------- End of Membership ---------------->
 
