--- a/index.html
+++ b/index.html
@@ -38,11 +38,15 @@
 
 		<section id="indexPage">
 			<h2 class="hidden">TRAA Index</h2>
+
+		<div class="welcomeCon">
 			<h2 id="WelcomeText">Welcome to the TRAA</h2>
-			<img class="HPwaterline" src="images/waterline.png" width="545" height="20" alt="Water Line">
+			<img class="HPwaterline" src="images/waterline.png" alt="Water Line">
 			<h2 id="IntroText">Dedication Today for Tomorrow</h2>
 			<p>“For the enhancement, protection and promotion of a viable,<br>multi-species fishery within the Thames River watershed.”</p>
-			<img class="HPwaterline2" src="images/waterline.png" width="545" height="20">
+			<img class="HPwaterline2" src="images/waterline.png" 	>
+		</div>
+
 		</section>
 
 <!--------------------- End of Index --------------->
@@ -50,7 +54,7 @@
 <!---------------------- Begin of About page --------->
 		<section id="aboutPage">
 			<h2>About the TRAA</h2>
-			<img class="waterline" src="images/waterline.png" width="450" height="15" alt="Water Line">
+			<img class="waterline" src="images/waterline.png"  alt="Water Line">
 
 			<section class="aboutContent">
 				<h2 class="hidden">About content</h2>
@@ -107,7 +111,7 @@
 				<h3> BE A TRAA MEMBER FOR A WHOLE YEAR FOR ONLY $25.00</h3>
 				<p>Your membership also adds another voice to our efforts in protecting and enhancing aquatic habitats in the London & area community.</p>
 			</div>
-			<img src="images/membership-icon.png" class="flip-vertical-left" alt="membership icon" width="405" height="405">
+			<img src="images/membership-icon.png" class="flipAnimation" alt="membership icon" width="405" height="405">
 		</section>
 <!------------------- End of Membership ---------------->
 
@@ -152,7 +156,7 @@
 <!----------------- Begin of Events page -------------->
 		<section id="eventPage">
 			<h2>Events</h2>
-			<img class="waterlineEvent" src="images/waterline.png" width="395" height="15">
+			<img class="waterlineEvent" src="images/waterline.png">
 			<div id="firstEvent">
 				<section class="event">
 					<img src="images/upcoming-img.jpg" alt="Upcoming image">
