Add newsletter page and animation

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="css/reset.css" type="text/css">  
   <link href="https://fonts.googleapis.com/css?family=Montserrat:500" rel="stylesheet"> 
   <link rel="stylesheet" href="css/main.css" type="text/css">  
+  <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
@@ -34,8 +35,7 @@
 			</header>
 		</div>
 
-<!------------ Begin of Index -------------->
-
+<!-- Begin of INDEX -->
 		<section id="indexPage">
 			<h2 class="hidden">TRAA Index</h2>
 
@@ -44,66 +44,63 @@
 			<img class="HPwaterline" src="images/waterline.png" alt="Water Line">
 			<h2 id="IntroText">Dedication Today for Tomorrow</h2>
 			<p>“For the enhancement, protection and promotion of a viable,<br>multi-species fishery within the Thames River watershed.”</p>
-			<img class="HPwaterline2" src="images/waterline.png" 	>
+			<img class="HPwaterline2" src="images/waterline.png" alt="Water line">
 		</div>
 
 		</section>
 
-<!--------------------- End of Index --------------->
-
-<!---------------------- Begin of About page --------->
+<!-- End of INDEX -->
+<!-- Begin of ABOUT -->
 		<section id="aboutPage">
 			<h2>About the TRAA</h2>
-			<img class="waterline" src="images/waterline.png"  alt="Water Line">
+			<img class="waterline" src="images/waterline.png" width="450" height="15" alt="Water Line">
 
 			<section class="aboutContent">
 				<h2 class="hidden">About content</h2>
-				<img class="aboutIcon" src="images/fish-icon.png" width="115" height="115">
+				<img class="aboutIcon" src="images/fish-icon.png" alt="fish icon" width="115" height="115">
 				<p>Protect, enhance and regenerate a viable, multi-species, year-round fishery.</p>
 			</section>
 
 			<section class="aboutContent">
 				<h2 class="hidden">About content</h2>
-				<img class="aboutIcon" src="images/fish-icon.png" width="115" height="115">
+				<img class="aboutIcon" src="images/fish-icon.png" alt="fish icon" width="115" height="115">
 				<p>Breed, relocate and stock to re-establish or augment appropriate species of fish.</p>
 			</section>
 
 			<section class="aboutContent">
 				<h2 class="hidden">About content</h2>
-				<img class="aboutIcon" src="images/global-icon1.png" width="125" height="155">
+				<img class="aboutIcon" src="images/global-icon1.png" alt="global icon" width="125" height="155">
 				<p>Promote and participate in environmental clean-up, pollution control and rehabilitation.</p>
 			</section>
 
 			<section class="aboutContent">
 				<h2 class="hidden">About content</h2>
-				<img class="aboutIcon" src="images/global-icon1.png" width="115" height="115">
+				<img class="aboutIcon" src="images/global-icon1.png" alt="global icon" width="115" height="115">
 				<p>Promote environmentally sound sport fishing practices.</p>
 			</section>
 
 			<section class="aboutContent">
 				<h2 class="hidden">About content</h2>
-				<img class="aboutIcon" src="images/handshake-icon.png" width="115" height="115">
+				<img class="aboutIcon" src="images/handshake-icon.png" alt="handshake icon"  width="115" height="115">
 				<p>Form partnerships with community businesses, government agencies, special interest groups, landowners, and other stakeholders in the Thames River watershed.</p>
 			</section>
 
 			<section class="aboutContent">
 				<h2 class="hidden">About content</h2>
-				<img class="aboutIcon" src="images/handshake-icon.png" width="115" height="115">
+				<img class="aboutIcon" src="images/handshake-icon.png" alt="handshake icon" width="115" height="115">
 
 				<p>Increase public awareness of the unique diversity of the Thames River Watershed, its challenges, its recreational opportunities and its vital importance to our community.</p>
 			</section>
 
 			<div id="aboutButton">
 				<a href="#" class="greenButton">Contact Us</a>
-				<h2 class="hidden">About content</h2>
+				<!-- <h2 class="hidden">About content</h2> -->
 				<a href="#" class="greyButton">See more</a>
 			</div>
-
-
 		</section>
+<!-- End of ABOUT -->
 
-<!---------------------- End of About Page --------------->
-<!------------------- Begin of Membership ------------->
+<!-- Begin of Membership -->
 		<section id="membership">
 			<h2 class="hidden">Membership</h2>
 			<div id="membershipText">
@@ -113,10 +110,8 @@
 			</div>
 			<img src="images/membership-icon.png" class="flipAnimation" alt="membership icon" width="405" height="405">
 		</section>
-<!------------------- End of Membership ---------------->
-
-<!------------ Begin of Projects  -------->
-
+<!-- End of Membership -->
+<!-- Begin of PROJECTS -->
 	<section class="projectsCon">
 
 		<div class="projectsHeader">
@@ -151,12 +146,12 @@
 
 	</section>
 
-<!-----------End Of Projects------- -->
+<!-- End of PROJECTS -->
 
-<!----------------- Begin of Events page -------------->
+<!-- Begin of EVENTS -->
 		<section id="eventPage">
 			<h2>Events</h2>
-			<img class="waterlineEvent" src="images/waterline.png">
+			<img class="waterlineEvent" src="images/waterline.png" alt="Water line">
 			<div id="firstEvent">
 				<section class="event">
 					<img src="images/upcoming-img.jpg" alt="Upcoming image">
@@ -207,9 +202,177 @@
 			<a href="#" id="bigEventButton">Explore our past events</a>
 			</div>
 		</section>
-<!--------------- End of Events Page -------------->
+<!-- End of Events -->
+<!-- Begin of NEWSLETTER -->
+	<section id="newsletter">
+	<h1>NEWSLETTER</h1>
+		<img src="images/waterline.png" alt="Water Line" class="waterlineNewsletter">
+		<div id="timeline">
+		<ul id="dates">
+			<li><a href="#2011" class="selected">2011</a></li>
+			<li><a href="#2010">2010</a></li>
+			<li><a href="#2009">2009</a></li>
+			<li><a href="#2008">2008</a></li>
+			<li><a href="#2007">2007</a></li>
+			<li><a href="#2006">2006</a></li>
+			<li><a href="#2005">2005</a></li>
+			<li><a href="#2004">2004</a></li>
+			<li><a href="#2003">2003</a></li>
+			<li><a href="#2001">2001</a></li>
+			<li><a href="#2000">2000</a></li>
+			<li><a href="#1999">1999</a></li>
+			<li><a href="#1997">1997</a></li>
+			<li><a href="#1996">1996</a></li>
+			<li><a href="#1986">1986</a></li>
+		</ul>
+		<ul id="issues">
+			<li id="2011" class="selected">
+				<img src="images/newletter.png" alt="Mail icon">
+				<h2>2011</h2>
+				<p><a href="#">First quarter</a></p>
+			</li>
+			<li id="2010">
+				<img src="images/newletter.png" alt="Mail icon">
+				<h2>2010</h2>
+				<p><a href="#">April</a></p>
+			</li>
+			<li id="2009">
+				<img src="images/newletter.png" alt="Mail icon">
+				<h2>2009</h2>
+				<p><a href="#">March</a></p>
+				<br>
+				<p><a href="#">May</a></p>
+				<br>
+				<p><a href="#">June</a></p>
+				<br>
+				<p><a href="#">August</a></p>
+				<br>
+				<p><a href="#">September</a></p>
+				<br>
+				<p><a href="#">October</a></p>
+				<br>
+				<p><a href="#">November</a></p>
+				<br>
+				<p><a href="#">December</a></p>
 
-<!--------------- CONTACT SECTION ------------->
+			</li>
+			<li id="2008">
+				<img src="images/newletter.png" alt="Mail icon">
+				<h2>2008</h2>
+				<p><a href="#">March</a></p>
+				<br>
+				<p><a href="#">May</a></p>
+				<br>
+				<p><a href="#">June</a></p>
+				<br>
+				<p><a href="#">December</a></p>
+			</li>
+			<li id="2007">
+				<img src="images/newletter.png" alt="Mail icon">
+				<h2>2007</h2>
+				<p><a href="#">January</a></p>
+				<br>
+				<p><a href="#">February</a></p>
+				<br>
+				<p><a href="#">April</a></p>
+				<br>
+				<p><a href="#">May</a></p>
+				<br>
+				<p><a href="#">June</a></p>
+				<br>
+				<p><a href="#">November</a></p>
+				<br>
+				<p><a href="#">December</a></p>
+			</li>
+			<li id="2006">
+				<img src="images/newletter.png" alt="Mail icon">
+				<h2>2006</h2>
+				<p><a href="#">June</a></p>
+				<br>
+				<p><a href="#">October</a></p>
+				<br>
+				<p><a href="#">November</a></p>
+			</li>
+			<li id="2005">
+				<img src="images/newletter.png" alt="Mail icon">
+				<h2>2005</h2>
+				<p><a href="#">Spring</a></p>
+				<br>
+				<p><a href="#">Summer</a></p>
+			</li>
+			<li id="2004">
+				<img src="images/newletter.png" alt="Mail icon">
+				<h2>2004</h2>
+				<p><a href="#">Winter</a></p>
+			</li>
+			<li id="2003">
+				<img src="images/newletter.png" alt="Mail icon">
+				<h2>2003</h2>
+				<p><a href="#">Spring</a></p>
+			</li>
+			<li id="2001">
+				<img src="images/newletter.png" alt="Mail icon">
+				<h2>2001</h2>
+				<p><a href="#">Spring</a></p>
+				<br>
+				<p><a href="#">Summer</a></p>
+				<br>
+				<p><a href="#">Fall/Winter</a></p>
+				<br>
+				<p><a href="#">Winter/Spring</a></p>
+			</li>
+			<li id="2000">
+				<img src="images/newletter.png" alt="Mail icon">
+				<h2>2000</h2>
+				<p><a href="#">Spring</a></p>
+				<br>
+				<p><a href="#">Summer</a></p>
+				<br>
+				<p><a href="#">Fall</a></p>
+				<br>
+				<p><a href="#">Winter</a></p>
+			</li>
+			<li id="1999">
+				<img src="images/newletter.png" alt="Mail icon">
+				<h2>1999</h2>
+				<p><a href="#">Spring</a></p>
+				<br>
+				<p><a href="#">Summer</a></p>
+				<br>
+				<p><a href="#">Fall</a></p>
+				<br>
+				<p><a href="#">Winter</a></p>
+			</li>
+			<li id="1997">
+				<img src="images/newletter.png" alt="Mail icon">
+				<h2>1997</h2>
+				<p><a href="#">Summer</a></p>
+				<br>
+				<p><a href="#">Fall</a></p>
+				<br>
+				<p><a href="#">Winter</a></p>
+			</li>
+			<li id="1996">
+				<img src="images/newletter.png" alt="Mail icon">
+				<h2>1996</h2>
+				<p><a href="#">Winter</a></p>
+			</li>
+			<li id="1986">
+				<img src="images/newletter.png" alt="Mail icon">
+				<h2>1986</h2>
+				<p><a href="#">October</a></p>
+			</li>
+		</ul>
+		<a href="#" id="next">+</a>
+		<a href="#" id="prev">-</a>
+	</div>
+</section>
+<script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+<script src='http://www.csslab.cl/ejemplos/timelinr/latest/js/jquery.timelinr-0.9.54.js'></script>
+
+<!-- End of NEWSLETTER -->
+
+<!-- Contact section -->
 	<div class="contacCon">
 		
 		<section class="contact">
@@ -252,10 +415,8 @@
 		</section>
 	</div>
 
-<!-------        END CONTACT SECTION       ---->
-
-<!--=========	SOCIAL MEDIA  ====== -->
-		
+<!-- End of contact -->
+<!-- Social media		 -->
 		<div class="socialMediaCon">
 			<section class="socialMedia">
 			<h2 class="hidden">Social Media Section</h2>
@@ -276,9 +437,8 @@
 			</section>
 		</div>
 
-<!--==== END SOCIAL MEDIA ========= -->
-
-<!-- ======== FOOTER ==============-->
+<!-- End of social media -->
+<!-- Footer -->
 		<div class="footerCon">
 			
 		<footer>
@@ -324,9 +484,11 @@
 		</footer>
 
 		</div>
-	
-<!-- ============ END FOOTER =========== -->
+<!-- ENd of footer	 -->
 	</div>
-    <script src="js/main.js"></script>
+        <script src="js/main.js"></script>
+    <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+	<script src='http://www.csslab.cl/ejemplos/timelinr/latest/js/jquery.timelinr-0.9.54.js'></script>
+
 </body>
 </html>
