Fixed footer and updated main.css

--- a/index.html
+++ b/index.html
@@ -56,37 +56,37 @@
 			<img class="waterline" src="images/waterline.png" width="450" height="15" alt="Water Line">
 
 			<section class="aboutContent">
-				<h2 class="hidden">About content</h2>
+				<h2 class="hidden">About content 1</h2>
 				<img class="aboutIcon" src="images/fish-icon.png" alt="fish icon" width="115" height="115">
 				<p>Protect, enhance and regenerate a viable, multi-species, year-round fishery.</p>
 			</section>
 
 			<section class="aboutContent">
-				<h2 class="hidden">About content</h2>
+				<h2 class="hidden">About content 2</h2>
 				<img class="aboutIcon" src="images/fish-icon.png" alt="fish icon" width="115" height="115">
 				<p>Breed, relocate and stock to re-establish or augment appropriate species of fish.</p>
 			</section>
 
 			<section class="aboutContent">
-				<h2 class="hidden">About content</h2>
+				<h2 class="hidden">About content 3</h2>
 				<img class="aboutIcon" src="images/global-icon1.png" alt="global icon" width="125" height="155">
 				<p>Promote and participate in environmental clean-up, pollution control and rehabilitation.</p>
 			</section>
 
 			<section class="aboutContent">
-				<h2 class="hidden">About content</h2>
+				<h2 class="hidden">About content 4</h2>
 				<img class="aboutIcon" src="images/global-icon1.png" alt="global icon" width="115" height="115">
 				<p>Promote environmentally sound sport fishing practices.</p>
 			</section>
 
 			<section class="aboutContent">
-				<h2 class="hidden">About content</h2>
+				<h2 class="hidden">About content 5</h2>
 				<img class="aboutIcon" src="images/handshake-icon.png" alt="handshake icon"  width="115" height="115">
 				<p>Form partnerships with community businesses, government agencies, special interest groups, landowners, and other stakeholders in the Thames River watershed.</p>
 			</section>
 
 			<section class="aboutContent">
-				<h2 class="hidden">About content</h2>
+				<h2 class="hidden">About content 6</h2>
 				<img class="aboutIcon" src="images/handshake-icon.png" alt="handshake icon" width="115" height="115">
 
 				<p>Increase public awareness of the unique diversity of the Thames River Watershed, its challenges, its recreational opportunities and its vital importance to our community.</p>
@@ -205,7 +205,7 @@
 <!-- End of Events -->
 <!-- Begin of NEWSLETTER -->
 	<section id="newsletter">
-	<h1>NEWSLETTER</h1>
+	<h2 class="newsHeader">NEWSLETTER</h2>
 		<img src="images/waterline.png" alt="Water Line" class="waterlineNewsletter">
 		<div id="timeline">
 		<ul id="dates">
@@ -445,10 +445,11 @@
 		<h2 class="hidden">Footer Section</h2>
 
 			<section class="footerNavCon">
-			<h2 class="hidden">Footer Navigation</h2>
+			
 
 				<h3>NAVIGATION</h3>
 				<nav class="footerNav">
+				<h2 class="hidden">Footer Navigation</h2>
 					<ul>
 						<li><a href="#">HOME</a></li>
 						<li><a href="#">ABOUT</a></li>
