created and finished sponsor section

--- a/index.html
+++ b/index.html
@@ -416,6 +416,32 @@
 	</div>
 
 <!-- End of contact -->
+
+<!-- SPONSOR SECTION -->
+	
+	<div class="sponsorCon">
+		<section class="sponsors">
+			<h2 class="hidden">Sponsor Section</h2>
+			
+			<div class="sponsorsImg">
+				<img src="images/sponsor_melchers.png" alt="Melchers Icon">
+
+				<img src="images/sponsor_guillevin.png" alt="Guivellin Logo">
+			</div>
+
+			<div class="sponsorsImg">
+				<img src="images/sponsor_angling.png" alt="Angling Logo" class="anglingLogo">
+			</div>
+
+			<div class="sponsorsImg2">
+				<img src="images/sponsor_muma.png" alt="Muma Logo">
+
+				<img src="images/sponsor_recycling.png">
+			</div>
+		</section>
+	</div>
+<!-- END SPONSOR SECTION -->
+
 <!-- Social media		 -->
 		<div class="socialMediaCon">
 			<section class="socialMedia">
