fixed footer section

--- a/index.html
+++ b/index.html
@@ -446,7 +446,7 @@
 			<div class="sponsorsImg2">
 				<img src="images/sponsor_muma.png" alt="Muma Logo">
 
-				<img src="images/sponsor_recycling.png">
+				<img src="images/sponsor_recycling.png" alt="Try Recycling Logo">
 			</div>
 		</section>
 	</div>
